--- a/education.tex
+++ b/education.tex
@@ -386,7 +386,7 @@ the same methods and tools later to potentially unrelated problems.
 
 \begin{figure*}[!t]
 \vskip -1.8in
-\includegraphics[width=1.02\hsize,clip]{astroML2.eps}
+\includegraphics[width=1.02\hsize,clip]{astroML2.pdf}
 \vskip -2.0in
 \caption{An example of sophisticated tools available in {\it astroML} and exercises that will be
 used in practical seminar work. The figure shows a comparison of the decomposition of SDSS 
