--- a/introduction.tex
+++ b/introduction.tex
@@ -11,27 +11,27 @@ at the University of Washington. We have secured broad institutional support and
 (Statistics and Astronomy), and the proposed work includes a workshop centered on professional development activities
 for faculty from other institutions wishing to emulate the proposed program. 
 
-\bits
+\begin{itemize}
 \item[]{\bf Education and Training} (Section \ref{sec:education}).
 Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
-  \bits
+\begin{itemize}
   \item two new courses
   \item new curriculum 
   \item Undergraduate \cdse~ Research Seminar
-  \eits
+  \end{itemize}
 \item {\bf Research and mentoring for research} (Section \ref{sec:research})
-  \bits
+\begin{itemize}
   \item facilitate entrance of Statistics students into computationally intensive data analysis research
   \item mentor Astronomy graduate students 
   \item mentoring undergraduates by PI's and graduate students
-  \eits
+  \end{itemize}
 \item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
-  \bits
+\begin{itemize}
   \item workshop for UW faculty in the use of the infrastructure and our experience with it
   \item training workshop with outside participation 
   \item software and datasets infrastructure for teaching computational statistics and machine learning 
-  \eits
-\eits  
+  \end{itemize}
+\end{itemize}
 
 
 In the remainder of this proposal, we describe each component in
