--- a/education.tex
+++ b/education.tex
@@ -235,7 +235,7 @@ developed course notes for {\it ``Probability and Statistics for
 partly on new course notes to be developed by \meila specifically for
 this more advanced course, and partly on the textbook of \astrocl~
 which will provide among others the Python exercises. We are also
-considering \cite{} Daniela's machine learning book.
+considering \cite{x} Daniela's machine learning book.
 
 \comment{
 \item{Motivation for \astrocl} \mmp{shorter,more to the point of grant}
