--- a/recruitment.tex
+++ b/recruitment.tex
@@ -53,7 +53,7 @@ that support students with disabilities in their educational goals.
 
 To recruit and retain {\bf women} into this program, we will leverage
 several existing organizations and efforts.  Our key partner will be
-the University of Washington Advance Program~\cite{}.  ADVANCE is
+the University of Washington Advance Program~\cite{x}.  ADVANCE is
 working on creating a diverse, thriving campus in which all faculty in
 science, engineering and mathematics (SEM) receive the proper support,
 flexibility and recognition to achieve her or his maximum
