fixed a couple of minor issues

--- a/proposal.tex
+++ b/proposal.tex
@@ -40,6 +40,8 @@
 
 %\renewcommand{\baselinestretch}{0.971}
 
+\usepackage{hyperref}
+
 
 \title{Statistical Explorations of Data in the {ACMS} {Program} at the
   {University} of {Washington}}
