--- a/research.tex
+++ b/research.tex
@@ -13,7 +13,7 @@ undergraduate students. The students will be mentored by the four
 PI's. They will be working on real research projects, some of which
 are listed below. 
 \bits
-\item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
+\item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{x}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
 \item {\em Non-parametric clustering and density estimation.} We will
   focus here on methods that cluster by finding high-density regions
   in very large data. This method is particularly suited to finding
