--- a/activities.tex
+++ b/activities.tex
@@ -1,60 +1,62 @@
 \section{Activities}
 \label{sec:activities}
 
-\subsection{Grad students involvement}
+\subsection{Graduate students involvement}
 \label{sec:activities-grad}
 
-For the statistics graduate students funded by this grant, I envision 
+For the statistics graduate students funded by this grant, we envision 
 \bits
 \item to fund several students for a relatively short time (2 quarters
-  to 1 year) We adopt this ``rotation'' plan recognizing that developing tools .
-(This ``rotation'' model will also assure that the ``API'' of our data infrastructure is truly functional, as each departing grad student will have to ensure the smoothe transition to her/his successor.)
-\item Student helps develop the software and data infrastructure for
-  the program. Searches for available data sets, curates them, writes
-  preprocessing software if necessary, designes tasks and exercises.
-\item In the same time, student gets practice and training with
-  analyzing large data. 
-\item The student can be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. Gradually, a research problem is formulated, and the student focuses on the data and methodology relevant to this problem. After this ``apprenticeship'', some students continue their research supervised by other advisors. 
-\item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and self-confidence. 
-\item This will enable stat PhD students to play useful roles in the other NSF funded initiatives at UW. For instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. This plan also harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
-\item Finally, the graduate student will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
+  to 1 year). We adopt this ``rotation'' plan recognizing that developing 
+tools cannot be the only part of a PhD work in statistics. 
+This ``rotation'' model will also assure that the ``API'' of our data
+infrastructure is truly functional, as each departing graduate student 
+will have to ensure smooth transition to her/his successor.)
+\item Students will help develop the software and data infrastructure for
+  the program, search for available data sets, curate them, write
+  preprocessing software if necessary, and design tasks and exercises. 
+  At the same time, students will get training for analyzing large data sets. 
+\item Students will be advised by the PI, by another Statistics faculty, or by another UW scientist with interests in statistical analysis of big data. Gradually, a research problem will be formulated and the student will
+focus on the data and methodology relevant to the chosen problem. After this ``apprenticeship'', 
+some students will continue their research supervised by other advisors. 
+\item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and providing self-confidence. 
+\item This program will enable statistics PhD students to play useful roles in other NSF funded initiatives at UW. For 
+%instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a %daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. T
+example, this plan harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
+\item Finally, the graduate students will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
  \eits
 
-\subsection{PI Involvement}
+\subsection{PI and Co-PIs Involvement}
 
 \bits
-\item First year: program coordination and curriculum planning. Within the department and between the other departments participating in ACMS. Preparation for phase 2 of the project happens now. 
+\item First year: program coordination and curriculum planning (within the department and between the other departments participating in ACMS). Preparation for stage 2 of the project. 
+Development of a plan for the core Python numerical and data structures libraries to be taught.
+Beginning of the development of course notes for \statcl.
 
-Develops (with the RA and the co-PI's) a plan for the core Python numerical and data structures libraries to be taught/presented. 
-
-Starts developing course notes for \statcl.
-
-\item Second year: Evaluates the success of the first phase and
-  incorporates lessons learned. Writes the bulk of the STAT 391 course
-  notes. Supervises the undergraduate research seminar. Major work
-  (with RA) selecting/curating the data sets to be used in
-  \statcl. \mmp{will lighten this because the salary was shrunk}
+\item Second year: Evaluation of the success of the first phase and
+  incorporation of the lessons learned. Development of the bulk of the STAT 391 course
+  notes. Supervision of  the undergraduate research seminar. 
+ Selecting/curating  (with RAs) of the data sets to be used in
+  \statcl. Organization and execution of the workshop. 
+%\mmp{will lighten this because the salary was shrunk}
 
 \item Third year: Evaluation of the second phase and fine-tuning of
-  the curriculum and program requirements. Explores possibilities to
-  open this pathway to math majors.
+  the curriculum and program requirements. Exploration of the possibilities to
+  open this pathway to math majors. Organization and execution of the workshop. 
  \eits
 
 \subsection{Undergraduate involvement}
 
-The PI and co-PI's have extensive track records of involving
-undergrads in research. 
-
-Undergraduates who take either of the courses will be involved in
+The PI and all co-PI's have extensive track records of involving
+undergrads in research. Undergraduates who take either of the courses will be involved in
 research projects either (1) along with the funded graduate students,
-superivsed by the PI, co-PI's and the graduate students or (2) in the
+supervised by the PI, co-PI's and the graduate students or (2) in the
 UW units that provide data sets.
 
 All undergraduates involved in research under this project, along with
 the graduate students, will participate in an {\em Undergraduate
-\cdse  Research Seminar} \comment{(UNDRESS)} where they will present and
+\cdse\  Research Seminar} \comment{(UNDRESS)} where they will present and
 discuss their work.  
-
 The seminar will be open to any other undergraduate students involved
 in research with Statistics faculty who would like to participate, as
 well as any other undergraduates across campus interested in \cdse~
@@ -63,14 +65,15 @@ experiences are shared, research teams are formed, new research
 projects are started, and familiarity with the strategic and social
 aspects of research is gained. 
 
-In addition to technical presentations/discussion by undergraduates,
-the seminar will include:
+In addition to technical presentations and discussions by undergraduate
+students, the seminar will include:
 \bits
 \item meetings where faculty (from sciences for example) present quantitative data analysis research projects to recruit interested undergraduates
-\item  mentorship sessions by guest speakers, UW graduate students and faculty, on carreer options in research, applying to graduate school, how to work in a team, how to approach a potential research advisor, how to approach a new research project
-\item presentations from outside speakers (e.g local buinesses Amazon,
-  Microsoft,...) on carrerr opportunties in \cdse. We will assure to bring in women and underrepresented minorities role models as often as possible among the internal and external guest speakers.
+\item  mentorship sessions by guest speakers, UW graduate students and faculty, on career options in research, applying to graduate school, how to work in a team, how to approach a potential research advisor, how to approach a new research project
+\item presentations from outside speakers (e.g local businesses such as Amazon,
+  Microsoft, and Google) on career opportunties in \cdse. We will assure to bring in women and underrepresented minorities role models as often as possible among the internal and external guest speakers.
 \eits
-Some of the seminar's activities and goals overlap with the {\em Statistics and Probability Association}'s\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and with the PreMAP program's, and we plan to do these jointly, reinforcing the  benefits for all groups involved.
+Some of the seminar's activities and goals overlap with the goals of {\em Statistics and Probability Association}\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and the Pre-MAP program\footnote{\tt http://www.astro.washington.edu/users/premap/}, 
+and we plan to do these jointly, reinforcing the  benefits for all groups involved.
 
 
