--- a/introduction.tex
+++ b/introduction.tex
@@ -11,8 +11,9 @@ at the University of Washington. We have secured broad institutional support and
 (Statistics and Astronomy), and the proposed work includes a workshop centered on professional development activities
 for faculty from other institutions wishing to emulate the proposed program. 
 
+\vskip 0.2in Our main goals and deliverables are: 
 \bits
-\item[]{\bf Education and Training} (Section \ref{sec:education}).
+\item {\bf Education and Training} (Section \ref{sec:education}).
 Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
   \bits
   \item two new courses
@@ -27,10 +28,10 @@ Transform the ACMS (Applied and Computational Math Sciences) Program Statistics 
   \eits
 \item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
   \bits
-  \item workshop for UW faculty in the use of the infrastructure and our experience with it
-  \item training workshop with outside participation 
   \item software and datasets infrastructure for teaching computational statistics and machine learning 
-  \eits
+  \item workshop for UW faculty % in the use of the infrastructure and our experience with it
+  \item workshop with outside participation 
+ \eits
 \eits  
 
 
