--- a/recruitment.tex
+++ b/recruitment.tex
@@ -5,9 +5,9 @@
  under-represented groups (including women, people with disabilities
  and under-represented minorities). To ensure a diverse range of
  applicants to the ACMS program we will actively recruit students from
- under represented groups (targeting incoming undergraduate students
+ under-represented groups (targeting incoming undergraduate students
  who have expressed an interest in statistics or math).  We will
- leverage the IGERT and Pre-Map programs described below; with the
+ leverage the IGERT and Pre-MAP programs described below; with the
  graduate students in the IGERT program acting as mentors and role
  models for the undergraduate students. Working with participating
  departments will enable us to leverage their recruitment efforts and
@@ -64,13 +64,13 @@ percentage of women tenured or tenure-track engineering faculty is
 currently 13.2\% compared to 21.3\% at UW. As part of their efforts,
 ADVANCE provides educational materials on gender bias, which we will
 share among all participants of the EXTREEMS-QED program (faculty and
-students)
+students). 
 
 \subsection{Mentoring, Networking, and Retaining Students}
 
 Mentoring and community building will begin immediately upon
 acceptance to the program. We will build upon the success of the
-``Pre-Major in Astronomy Program''\cite{garner2010diversity} that was
+``Pre-Major in Astronomy Program'' \cite{garner2010diversity} that was
 developed in the Astronomy department to engage under-represented
 students in research early in their careers and to provide a platform
 for supplementing the educational needs of these students with
@@ -78,7 +78,7 @@ addition tutoring and course work. The methodology of the program
 centers on mentoring and peer support with leadership for the program
 coming from the graduate students.  As an example of the impact of
 such an approach, in 2008, the three founding members of the astronomy
-PREMAP were awarded a Certificate of Excellence for their astronomy
+Pre-MAP were awarded a Certificate of Excellence for their astronomy
 diversity efforts by the National Society of Black Physicists. All
 three students obtained their PhDs and moved on to faculty positions
 or prize postdoctoral fellowships.
