--- a/research.tex
+++ b/research.tex
@@ -1,9 +1,9 @@
 \section{Research}
 \label{sec:research}
 
-The research plan under this grant will have as primary goal to
+The research plan under this grant will have as its primary goal to
 introduce and prepare students to perform research in computationally
-intense statistical modeling and in the stastical analysis of large
+intense statistical modeling and in the statistical analysis of large
 scientific data. The students targeted will be Statistics and ACMS
 Statistics track undergraduates, as well as Statistics and Astronomy
 graduate students. 
